--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,10 +4,10 @@
 
 @keyframes roll-up {
   from {
-    transform: translateY(130px);
+    transform: translateY(10px);
   }
   to {
-    transform: translateY(10px);
+    transform: translateY(130px);
   }
 }
 
@@ -22,8 +22,8 @@
   background-position: center;
   background-size: cover;
   /* background-color: #49497582; */
-  background-color: #a09fb6;
-  box-shadow: inset 0 0 0 3px rgba(255, 255, 255, 0.3);
+  background-color: #4f4f4f;
+  box-shadow: inset 0 0 0 5px #9492be96;
   /* background-color: #adc1ffab; */
   /* background-color: #583f706c; */
   /* box-shadow: inset 0 0 0 4px rgba(207, 210, 246, 0.3); */
@@ -32,7 +32,8 @@
   width: 220px;
   height: 220px;
   animation: profile__animate 8000ms ease-in-out infinite 1000ms;
-  border-radius: 999px;
+  border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  /* border-radius: 999px; */
   transition: all 500ms ease-in-out;
 }
 
@@ -42,7 +43,7 @@
   box-shadow: inset 0 0 0 4px rgba(255, 255, 255, 0.3);
 }
 
-@keyframes profile__animate {
+/* @keyframes profile__animate {
   0% {
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
   }
@@ -54,7 +55,7 @@
   100% {
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
   }
-}
+} */
 
 @media screen and (max-width: 768px) {
   .home__img {
